--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                      </div>
 
                      <!-- add user card -->
-                     <div class="grid grid-cols-4 gap-8" id="user-card">
+                     <div class="mx-auto grid 2xl:grid-cols-4 xl:grid-cols-4 lg:grid-cols-3 md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8" id="user-card">
                      </div>
 
                      <!-- show more btn -->
